# dfttools

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dfttools/: compute.py  compute_TEP.py  csv.py  fermi_boltztrap2.py  fermisurfer.py  mp_funcs.py  qe_to_boltztrap2.py  smooth.py  toCSV.py  units.py  utils.py  wannier90.py
tests/: compare_QE_bands_pkl.py  curvature_compare.py  export_to_csv.py  pytest.py
